# morfologia-matematica

./: CMakeLists.txt  main.cpp  sonar-project.properties
